--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -3,8 +3,29 @@
 #:import images_path kivymd.images_path
 #:import Clock kivy.clock.Clock
 
-Screen:
-    
+
+ScreenManager:
+    id: sm_master
+
+    Screen:
+        name: "splash_screen"
+        LogoProgressWheel:
+            id: lpw
+        # LoadingScreen:
+        #     id: 
+        
+    Screen:
+        name: "main_app_screen"
+        MainAppScreen:
+            id: main_app
+        
+
+# <LoadingScreen>:
+#     LogoProgressWheel:
+#         id: lpw
+        
+<MainAppScreen@Screen>:
+
     LogoBackground:
         background_color: app.theme_cls.colors[app.theme_cls.theme_style]["Background"]
         logo_color: app.theme_cls.accent_dark
