Revamped snackbar, added an icon

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -1088,3 +1088,24 @@ Screen :
                         value: str(root.number_of_visibilities_above_snrcut)
 
 
+
+<CustomSnackbar>:
+
+    MDIconButton:
+        pos_hint: {'center_y': .5}
+        icon: root.icon
+        opposite_colors: True
+
+    MDLabel:
+        id: text_bar
+        size_hint_y: None
+        height: self.texture_size[1]
+        text: root.text
+        font_size: root.font_size
+        theme_text_color: 'Custom'
+        text_color: root.text_color
+        shorten: True
+        shorten_from: 'right'
+        pos_hint: {'center_y': .5}
+
+
